2008-06-16  Ira Rosen  <irar@il.ibm.com>

	PR tree-optimization/36493
	* gcc.dg/vect/pr36493.c: New testcase.

2008-06-15  Simon Martin  <simartin@users.sourceforge.net>

	PR c++/35320
	* g++.dg/parse/bitfield3.C: New test.

2008-06-15  Simon Martin  <simartin@users.sourceforge.net>

	PR c++/35317
	* g++.dg/other/dtor2.C: New test.

2008-06-13  Jakub Jelinek  <jakub@redhat.com>

	PR c/36507
	* gcc.dg/inline-28.c: New test.
	* gcc.dg/inline-29.c: New test.
	* gcc.dg/inline-30.c: New test.

2008-06-12  Joseph Myers  <joseph@codesourcery.com>

	* gcc.dg/compat/struct-layout-1.exp (orig_gcc_exec_prefix_saved):
	Always initialize.
	* g++.dg/compat/struct-layout-1.exp (orig_gcc_exec_prefix_saved):
	Always initialize.

2008-06-12  Richard Guenther  <rguenther@suse.de>

	Backport from mainline
	2008-06-04  Richard Guenther  <rguenther@suse.de>

	* gcc.c-torture/execute/20080604-1.c: New testcase.

2008-06-12  Jakub Jelinek  <jakub@redhat.com>

	PR testsuite/36443
	* gcc.dg/compat/struct-layout-1.exp: Temporarily unset
	GCC_EXEC_PREFIX from environment when running $HOSTCC.
	* g++.dg/compat/struct-layout-1.exp: Likewise.

2008-06-11  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/36474
	* gcc.dg/tree-ssa/alias-15.c: Adjust testcase.

2008-06-09  Eric Botcazou  <ebotcazou@adacore.com>

	* gnat.dg/specs/pack3.ads: New test.
	* gnat.dg/specs/pack3_pkg.ads: New helper.

2008-06-07  Sebastian Pop  <sebastian.pop@amd.com>

	* testsuite/gcc.dg/tree-ssa/ltrans-8.c: Fix outer loop strides
	to be large enough to not be in L1 cache.

2008-06-07  Uros Bizjak  <ubizjak@gmail.com>

	Backport from mainline:
	2008-05-12  Uros Bizjak  <ubizjak@gmail.com>

	PR rtl-optimization/36111
	* gcc.dg/pr36111.c: New test.
	
2008-06-06  Joseph Myers  <joseph@codesourcery.com>

	* lib/target-supports.exp (check_effective_target_powerpc_spu):
	Call check_effective_target_powerpc_altivec_ok.
	* gcc.target/powerpc/dfp-dd.c, gcc.target/powerpc/dfp-td.c,
	gcc.target/powerpc/ppc32-abi-dfp-1.c,