@@ -1,3 +1,10 @@
+2008-06-18  Joseph Myers  <joseph@codesourcery.com>
+
+	* lib/target-supports.exp
+	(check_effective_target_powerpc_hard_double): New.
+	* gcc.dg/tree-ssa/loop-19.c: Use powerpc_hard_double instead of
+	powerpc*-*-*.
+
 2008-06-16  Ira Rosen  <irar@il.ibm.com>
 
 	PR tree-optimization/36493
